syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.aleclerc.windpath.service.path.api.domain";
option java_outer_classname = "PathCommands";

package path.domain;
import "common.proto";
import "gpx.proto";
import "google/protobuf/timestamp.proto";

service Path {
    rpc apply (PathCommand) returns  (path.common.GenericResponse)  {
    }
}

message PathCommand {
    path.common.ProtoUUID id = 1;
    oneof command {
        CreatePathFromGpxCommand createPathFromGpxCommand = 2;
        RenamePathCommand renamePathCommand = 3;
        RemovePathCommand removePathCommand = 4;
    }
}

message CreatePathFromGpxCommand {
    reserved 1,2;
    path.gpx.Track track = 3;
    google.protobuf.Timestamp time = 4;
    path.gpx.Bounds bounds = 5;
}

message RenamePathCommand {
    string name = 1;
}

message RemovePathCommand {
}